music: yearly cleanup
- Move all demo to the example package
- Fix octaves (they've been wrong for several years!)
- Reformats